--- a/css/main.css
+++ b/css/main.css
@@ -1106,11 +1106,17 @@ a {
   }
 }
 
-.buttons-list {
-  display: flex;
-  justify-content: center;
-  padding-top: 94px;
-  margin-bottom: 50px;
+@media screen and (max-width: 767px) {
+  .buttons-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: 40px;
+    padding-top: 60px;
+  }
+  .buttons-list__item {
+    margin-top: 15px;
+  }
 }
 
 .buttons-list__item {
@@ -1133,39 +1139,66 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.buttons-list__element:hover, .buttons-list__element:focus {
-  background-color: var(--extra-blue-color);
-  color: var(--main-white-color);
-  cursor: pointer;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.01);
+@media screen and (min-width: 768px) {
+  .buttons-list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    padding-top: 94px;
+    margin-bottom: 50px;
+  }
+  .buttons-list__element:hover, .buttons-list__element:focus {
+    background-color: var(--extra-blue-color);
+    color: var(--main-white-color);
+    cursor: pointer;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.01);
+  }
 }
 
 /* карточки продуктов */
-.product-section {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 94px;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+@media screen and (max-width: 767px) {
+  .product-section__item:not(:last-child) {
+    padding-bottom: 30px;
+  }
+  .product-section__item:last-child {
+    padding-bottom: 60px;
+  }
 }
 
-.product-section__item {
-  flex-basis: calc(100% - var(--card-set-gap))/3;
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
-  padding: 0px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .product-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 60px;
+    margin-left: calc(-1 * var(--card-set-gap));
+    margin-top: calc(-1 * var(--card-set-gap));
+  }
+  .product-section__item {
+    flex-basis: calc(100% - var(--card-set-gap))/2;
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);
+    padding: 0px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .product-section__item:hover, .product-section__item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
-.product-section__item:hover, .product-section__item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .product-section {
+    padding-bottom: 94px;
+  }
+  .product-section__item {
+    flex-basis: calc(100% - var(--card-set-gap))/3;
+  }
 }
 
 .name-product {
   margin-bottom: 4px;
   font-weight: bold;
   font-size: 18px;
-  line-height: 36px;
+  line-height: 2;
   color: var(--main-black-color);
 }
 
