--- a/sass/layout/_product-section.scss
+++ b/sass/layout/_product-section.scss
@@ -1,24 +1,45 @@
 /* карточки продуктов */
-.product-section {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 94px;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+@media screen and (max-width: 767px) {
+  .product-section__item {
+    &:not(:last-child) {
+      padding-bottom: 30px;
+    }
+
+    &:last-child {
+      padding-bottom: 60px;
+    }
+  }
 }
 
-.product-section__item {
-  flex-basis: calc(100% - var(--card-set-gap)) / 3;
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
-  padding: 0px;
+@media screen and (min-width: 768px) {
+  .product-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 60px;
+    margin-left: calc(-1 * var(--card-set-gap));
+    margin-top: calc(-1 * var(--card-set-gap));
+  }
+  .product-section__item {
+    flex-basis: calc(100% - var(--card-set-gap)) / 2;
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);
+    padding: 0px;
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .product-section {
+      padding-bottom: 94px;
+    }
+    .product-section__item {
+      flex-basis: calc(100% - var(--card-set-gap)) / 3;
+    }
   }
 }
 
@@ -26,7 +47,7 @@
   margin-bottom: 4px;
   font-weight: bold;
   font-size: 18px;
-  line-height: 36px;
+  line-height: 2;
   color: var(--main-black-color);
 }
 .type-product {
