--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,7 +29,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   background-color: #fff;
   z-index: 100;
@@ -49,16 +49,36 @@
 }
 .mobile-menu__container {
   position: relative;
+  min-height: 200px;
+  padding-top: 48px;
+  padding-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 .mobile-menu__close-btn {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 15px;
+}
+.mobile-network {
+  display: flex;
+  &__item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+  }
+  &__item:not(:first-child) {
+    padding-left: 10px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .header__logo {
     margin-right: 88px;
+  }
+  .mobile-menu {
+    display: none;
   }
   .burger-btn {
     display: none;
