--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -5,8 +5,8 @@
   top: 50%;
   left: 50%;
 
-  width: 450px;
-  height: 609px;
+  min-width: 450px;
+  min-height: 609px;
   background-color: var(--main-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
