--- a/css/main.css
+++ b/css/main.css
@@ -1122,6 +1122,7 @@ a {
 .clients-section-list__client {
   width: 210px;
   height: 92px;
+  color: var(--icon-bg-color);
   border: 1px solid var(--icon-bg-color);
   border-radius: 4px;
   margin-left: 15px;
@@ -1131,26 +1132,23 @@ a {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  fill: var(--icon-bg-color);
+}
+
+.clients-section-list__client:hover, .clients-section-list__client:focus {
+  color: var(--extra-blue-color);
+  border: 1px solid var(--extra-blue-color);
 }
 
 .clients-section-list__icon {
   width: 106px;
   height: 60px;
   fill: var(--icon-bg-color);
-}
-
-.clients-section-list__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-section-list__client:hover .clients-section-list__icon,
 .clients-section-list__clientt:focus .clients-section-list__icon {
   fill: var(--extra-blue-color);
-}
-
-.clients-section-list__client:hover, .clients-section-list__client:focus {
-  border: 1px solid var(--extra-blue-color);
 }
 
 @media screen and (min-width: 768px) {
