--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -20,7 +20,10 @@
 .clients-section-list__client {
   width: 210px;
   height: 92px;
+
+  color: var(--icon-bg-color);
   border: 1px solid var(--icon-bg-color);
+
   border-radius: 4px;
   margin-left: 15px;
   margin-top: 15px;
@@ -31,29 +34,24 @@
   align-items: center;
   cursor: pointer;
 
-  fill: var(--icon-bg-color);
+  &:hover,
+  &:focus {
+    color: var(--extra-blue-color);
+    border: 1px solid var(--extra-blue-color);
+  }
 }
 
 .clients-section-list__icon {
   width: 106px;
   height: 60px;
   fill: var(--icon-bg-color);
-}
-.clients-section-list__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   .clients-section-list__client:hover &,
   .clients-section-list__clientt:focus & {
     fill: var(--extra-blue-color);
   }
 }
 
-.clients-section-list__client {
-  &:hover,
-  &:focus {
-    border: 1px solid var(--extra-blue-color);
-  }
-}
 @media screen and (min-width: 768px) {
   .clients-section__title {
     font-size: 28px;
